# gds

./: CMakeLists.txt  README.md
src/: data.py  main.cpp  main.py
src/cl/: device.cpp  device.h
src/core/: device.cpp  device.h
src/gds/: gds.cpp  gds.h
src/gds/gas/: corrector.cpp  corrector.h  euler_solver.cpp  euler_solver.h  fluid_limiter.cpp  fluid_limiter.h  reimann_solver.cpp  reimann_solver.h  types.h
src/math/: euler_corrector.cpp  euler_corrector.h  euler_solver.cpp  euler_solver.h  fluid_corrector.cpp  fluid_corrector.h  fluid_limiter.cpp  fluid_limiter.h  reimann_solver.cpp  reimann_solver.h  types.h
src/ocl/: device.cpp  device.h
src/utils/: logger.cpp  logger.h  utils.cpp  utils.h
