cmake_minimum_required(VERSION 3.5.1)
project(gds)
#find_package(OpenCL REQUIRED)
#include_directories(${OpenCL_INCLUDE_DIRS})
#link_directories(${OpenCL_LIBRARY})
set (CMAKE_CXX_FLAGS -std=gnu++17)
file(GLOB_RECURSE SRCS *.cpp)
file(GLOB_RECURSE HDRS *.h)
add_executable(gds ${SRCS} ${HDRS} )
#target_link_libraries(gds ${OpenCL_LIBRARY})
